[ADD] remote-names endpoint
